# pokemon-vgc-meta

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt
.claude/agents/: models-agent.md  web-agent.md
data/processed/meta/: forecast_regmb26.csv  weekly_centroid_drift.csv  weekly_cluster.csv  weekly_entropy.csv  weekly_novelty.csv  weekly_species.csv
data/processed/meta_with_tournaments/: weekly_centroid_drift.csv  weekly_cluster.csv  weekly_entropy.csv  (+2 more)
deploy/huggingface/: Dockerfile  README.md  SETUP.md
docs/: index.html  team_representation_learning.md
models/masked_team_transformer_ma/: config.json  kind_vocab.json  token_vocab.json
models/matchup/: matchup.pt
models/mdm/: mdm.pt
models/mdm_multireg/: mdm.pt
scripts/: build_meta_timeseries.py  build_multi_reg_anchors.py  build_multi_regulation_dataset.py  build_static_site.py  build_team_knn.py  download_vgc_bench_ma.py  eval_forecasters.py  forecast_meta.py  predict_meta.py  rate_team.py  run_meta_app.py  scrape_limitless_vgc.py  sweep_mdm_regularization.py  test_meta_patterns.py  train_masked_team_model.py  train_matchup.py  train_mdm.py  train_multi_reg_mdm.py
src/vgc_team/: __init__.py  config.py
tests/: test_app_service.py  test_build_team_knn.py  test_frozen_encoder.py  test_hierarchical_team_transformer.py  test_matchup.py  test_mdm_dataset.py  test_mdm_evaluate.py  test_mdm_model.py  test_meta_patterns.py  test_meta_timeseries.py  test_pokepaste.py  test_team_showdown_parser.py  test_tournaments.py  test_train_masked_team_model.py  test_ucsv.py
(+39 files in other folders)
