[project]
name = "pokemon-vgc-team-builder"
version = "0.1.0"
description = "Representation learning experiments for Pokemon VGC teambuilding."
readme = "README.md"
requires-python = ">=3.11,<3.13"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
